base/src/test/resources/failure/tactic/hole-number-mismatch2.aya.txt
tactic {
  | suc {??}
  | zero
}
In file $FILE:11:31 ->

   9 | | a, suc b => suc (a + b)
  10 | 
  11 | example def simpleTac2: Nat => tactic {
                                      ^^
  12 |   | {??} + {??}
  13 |   | tactic { | suc {??} | zero }
  14 |   | zero
  15 |   | zero
  16 | }

Error: tactic {
         | suc {??}
         | zero
       }
       
       is nested in
       
       tactic {
         | {??} + {??}
         | tactic {
           | suc {??}
           | zero
         }
         | zero
         | zero
       }

1 error(s), 0 warning(s).
What are you doing?
